Fix filters causing table to jump on events page

--- a/hourglass/views/main/static/css/hourglass/events.css
+++ b/hourglass/views/main/static/css/hourglass/events.css
@@ -14,3 +14,6 @@ th#occurrences {
 th#lastcheck {
     width: 10%;
 }
+#status-filter-div>select, #zone-filter-div>select, #check-filter-div>select, #hide-events-filter-div>select {
+    visibility: hidden;
+}
